# backend/config/routes.rb
@@ -5,6 +5,7 @@ Rails.application.routes.draw do
   mount Rswag::Api::Engine => '/api-docs'
   resources :comments
   get 'stores', to: 'stores#index'
+  resources :rooms, only: [:index]
   get 'error_test', to: 'stores#error_test'
   get 'comparison_report', to: 'comparison_report#show'
   get 'up' => 'rails/health#show', :as => :rails_health_check
